[gd_scene load_steps=13 format=3 uid="uid://drj0y0bat3plp"]

[ext_resource type="Script" path="res://scripts/actors/goblin.gd" id="1_fyay3"]
[ext_resource type="Script" path="res://scripts/actors/StatsManager.gd" id="1_h812t"]
[ext_resource type="Texture2D" uid="uid://ccn1vtotoo544" path="res://icon.svg" id="2_ieei5"]
[ext_resource type="Script" path="res://scripts/resources/ProjectileResource.gd" id="2_j7oio"]
[ext_resource type="Script" path="res://scripts/resources/ActorResource.gd" id="3_c5hcn"]
[ext_resource type="PackedScene" uid="uid://bivbtviy0fawf" path="res://scenes/items/Pointer.tscn" id="3_jwq71"]
[ext_resource type="Script" path="res://scripts/resources/ItemResource.gd" id="3_wdogx"]

[sub_resource type="Resource" id="Resource_t2xee"]
script = ExtResource("2_j7oio")
life_time = 2.0
distance = 600
gravity = 1.0

[sub_resource type="Resource" id="Resource_qf1sb"]
script = ExtResource("3_wdogx")
item_name = "Spear"
item_type = "weapon"
unlock_water = true
double_jump = true
_projectile = SubResource("Resource_t2xee")
ammo_type = "none"

[sub_resource type="Resource" id="Resource_scsb3"]
script = ExtResource("3_c5hcn")
name = "Goblin"
health = 100
speed = 400
jump_height = -600
acenstion_time = 0.5
decension_time = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_x18md"]
radius = 176.556

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6s3j"]

[node name="Goblin" type="CharacterBody2D" node_paths=PackedStringArray("stats_manager")]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_fyay3")
stats_manager = NodePath("StatsManager")
_weapon = SubResource("Resource_qf1sb")

[node name="StatsManager" type="Node" parent="."]
script = ExtResource("1_h812t")
_actor_resource = SubResource("Resource_scsb3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_ieei5")

[node name="Pointer" parent="." instance=ExtResource("3_jwq71")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_x18md")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n6s3j")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
